objects/B25__Reservation__c.object
<CustomObject>
    <fields>
        <fullName>SO_VIP_Catering_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catering Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Classic_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classic Visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Details__c</fullName>
        <label>Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Max_Attendees__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Max. Attendees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Meeting_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_VIP_PPE_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPE Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reservations (Primary Contact)</relationshipLabel>
        <relationshipName>Reservations_VIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Room_Setup__c</fullName>
        <label>Room Setup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Special_Requests__c</fullName>
        <label>Special Requests</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Tour_Type__c</fullName>
        <label>Tour Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Commission_Tour_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_VIP_Transport_Requirements__c</fullName>
        <label>Transport Requirements</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>OUV_Service__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Todays_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Todays Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transmission_Description__c</fullName>
        <formula>OUV_Vehicle__r.OUV_TransmissionDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transmission Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedBooking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VehicleCondition__c</fullName>
        <label>Vehicle Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VehicleMileage__c</fullName>
        <formula>OUV_Vehicle__r.OUV_VehicleMileage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Loan_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Loan Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Code__c</fullName>
        <formula>OUV_Vehicle__r.OUV_ModelCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model Code</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>OUV_Reservation_Editable</fullName>
        <active>true</active>
        <description>This is the standard OUV booking line item type available to users</description>
        <label>Reservation Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_Reservation_READ_ONLY</fullName>
        <active>true</active>
        <description>This is a read only RT for OUV booking where only the Vista Vehicle is editable by the user</description>
        <label>OUV Reservation READ ONLY</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Bespoke</fullName>
        <active>true</active>
        <label>Bespoke</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_JLR</fullName>
        <active>true</active>
        <label>JLR</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Maintenance</fullName>
        <active>true</active>
        <label>Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Private_Office</fullName>
        <active>true</active>
        <label>Private Office</label>
    </recordTypes>
    <sharingReasons>
        <fullName>OUV_Fleet_Members__c</fullName>
        <label>Fleet Members</label>
    </sharingReasons>
    <validationRules>
        <fullName>OUV_BookingPeriodCannotBeyondHandInDate</fullName>
        <active>false</active>
        <errorConditionFormula>IF( NOT( ISPICKVAL( OUV_Vehicle__r.OUV_VehicleMasterStatus__c , &quot;Handed In&quot;) ) &amp;&amp; ( OUV_Booking__r.OUV_BookingStartDate__c &gt;  OUV_Vehicle__r.OUV_HandinDate__c ||  OUV_Booking__r.OUV_BookingEndDate__c &gt;  OUV_Vehicle__r.OUV_HandinDate__c ), true, false)</errorConditionFormula>
        <errorMessage>You are not able to book this vehicle as booking period is beyond the Expected Handed in Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_BookingType_Passout</fullName>
        <active>true</active>
        <description>Don&apos;t allow vehicle whose type is Passout and master status is Handed In</description>
        <errorConditionFormula>AND( 
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
ISPICKVAL(OUV_Vehicle__r.OUV_VehicleMasterStatus__c, &apos;Handed In&apos;), 
OR( 
ISPICKVAL(OUV_Booking__r.OUV_BookingType__c, &apos;Passout&apos;), 
ISPICKVAL(OUV_Booking__r.OUV_BookingType__c, &apos;Workshop Booking&apos;) 
) 
)</errorConditionFormula>
        <errorMessage>Vehicle with Master status Handed in can only be booked for Repair, Auction or Other Re-marketing event</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Booking_Check_In_earlier_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), Booking_Start_Time__c  &gt; Car_Entry_Date__c
)</errorConditionFormula>
        <errorMessage>Booking Check In date cannot be earlier than Booking start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Booking_Check_Out_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), OR (  Booking_Start_Time__c  &gt; Car_Exit_Date__c, 
 Booking_End_Time__c  &lt; Car_Exit_Date__c
)
)</errorConditionFormula>
        <errorMessage>Booking Check out date cannot be earlier Booking start date or Later than Booking End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Booking_Check_in_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), Car_Exit_Date__c  &gt; Car_Entry_Date__c
)</errorConditionFormula>
        <errorMessage>Booking Check in date can be only equal or greater then the Booking Check out date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Booking_Driver_Validation</fullName>
        <active>true</active>
        <description>If VLA Checkbox is not ticked, Driver 1 must be mandatory.</description>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
 B25__Reservation_Type__r.Name != &apos;Preparation/Transportation&apos;,
ISBLANK( Driver_1__c ), 
OR( 
ISBLANK ( OUV_Booking__c), 
ISPICKVAL( OUV_Booking__r.OUV_BookingApprovalStatus__c , &apos;New&apos;) 
),  
 B25__Reservation_Type__r.Name != &apos;Preparation/Transportation&apos;,
NOT( ISPICKVAL(Booking_Justification_Passout__c,&apos;External Loan (VLA)&apos;) ) )</errorConditionFormula>
        <errorMessage>Please fill the Driver 1 field for this booking justification.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_CheckINFieldsMustBeComplete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
( Keys_Checked_In__c = TRUE &amp;&amp; (ISBLANK(TEXT( 	No_Of_Keys_Checked_In__c )) || ISBLANK( Car_Entry_Date__c ) || ISBLANK( Mileage_At_Close_Of_Booking__c) || ISBLANK( VehicleCondition__c ) ))
)</errorConditionFormula>
        <errorMessage>Please ensure that the No. of Keys Checked In, Car Entry Date, Mileage At Close Of Booking and the Vehicle Condition fields are filled in if the keys have been checked in</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_CheckOUTFieldsMustBeComplete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), (Keys_Checked_Out__c = TRUE &amp;&amp; ( ISBLANK(TEXT(	No_Of_Keys_Checked_Out__c)) || ISBLANK( Car_Exit_Date__c )))
)</errorConditionFormula>
        <errorMessage>Please ensure that the No. of Keys Checked out and the Car Exit Date are filled in if the keys have been checked out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_FieldsRequiredBeforeBookingIsClosed</fullName>
        <active>true</active>
        <description>VehicleMileage,CarCondition,Location fields should be populated if user is closing respective booking</description>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), IF(ISCHANGED(Closed_Booking__c) &amp;&amp; Closed_Booking__c = true &amp;&amp; Booking_Status__c = &apos;Closed&apos; &amp;&amp;  ISBLANK(Reservation_Preparation_Transportation__c )&amp;&amp; (ISNULL(Mileage_At_Close_Of_Booking__c)|| 
(OUV_Account__c == &apos;&apos; || OUV_Account__c == NULL) || 
ISBLANK(VehicleCondition__c) ) , true, false)
)</errorConditionFormula>
        <errorMessage>Please fill following field before closing the booking: Mileage End, Vehicle Condition, Return Location</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Location_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
(ISNULL( Destination_Location__c  )|| ( Destination_Location__c  == &apos;&apos;) ),( ISNULL( Other_Location__c) || (Other_Location__c == &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Please fill either Location or Other Location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Market_US_License_Mandatory</fullName>
        <active>true</active>
        <description>If Market of the Booking is US, then License Plate is mandatory.</description>
        <errorConditionFormula>AND( 
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
OR( 
OUV_Booking__r.OUV_Market__c = &quot;US&quot;,
OUV_Booking__r.OUV_Market__c = &quot;USA&quot;,
OUV_Booking__r.OUV_Market__c = &quot;U.S&quot;,
OUV_Booking__r.OUV_Market__c = &quot;U.S.A&quot;,
OUV_Booking__r.OUV_Market__c = &quot;United States&quot;),
LEN( License_Plate__c ) &lt; 1 )</errorConditionFormula>
        <errorMessage>Please fill the License Plate field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Mileage_Close_Of_Booking_Validation</fullName>
        <active>true</active>
        <description>Mileage at Close of Booking can be only equal or greater than the Current Vehicle Mileage</description>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
VehicleMileage__c &gt; Mileage_At_Close_Of_Booking__c
)</errorConditionFormula>
        <errorMessage>Mileage at Close of Booking can be only equal or greater than the Current Vehicle Mileage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_PreparationTransportation_EndDate</fullName>
        <active>true</active>
        <description>The Preparation/Transportation End should be after the Reservation Start Date and before the Reservation End Date</description>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
OR(
AND(
ISNEW(),
Includes_Preparation_Transportation__c = true,
Preparation_Transportation_End__c &lt; B25__StartLocal__c),
AND(
ISNEW(),
Includes_Preparation_Transportation__c = true,
Preparation_Transportation_End__c &gt; B25__EndLocal__c))
)</errorConditionFormula>
        <errorMessage>The Preparation/Transportation End should be after the Reservation Start Date and before the Reservation End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_PreparationTransportation_IsTicked</fullName>
        <active>true</active>
        <description>Both Includes Preparation/Transportation checkbox and Preparation/Transportation End need to be filled in order for a Preparation Reservation to be created</description>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
OR(
AND(
Includes_Preparation_Transportation__c = TRUE,
ISNULL(Preparation_Transportation_End__c)
), 
AND(
Includes_Preparation_Transportation__c = FALSE,
NOT(ISNULL(Preparation_Transportation_End__c)) 
)
)
)</errorConditionFormula>
        <errorMessage>Both &quot;Includes Preparation/Transportation&quot; checkbox and &quot;Preparation/Transportation End&quot; need to be filled in order for a Preparation Reservation to be created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Reservation_Mandatory_License_Plate</fullName>
        <active>true</active>
        <description>Actual License Plate Number is mandatory when Check Out information is filled in.</description>
        <errorConditionFormula>AND( 
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;),
OUV_Booking__r.OUV_Car_Received__c = true,  ISBLANK( Actual_License_Plate_Number__c ) )</errorConditionFormula>
        <errorMessage>Please fill the Actual License Plate Number field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_StartDate_EndDate_Validation</fullName>
        <active>true</active>
        <description>Compare B25__StartLocal__c with B25__EndLocal__c.</description>
        <errorConditionFormula>AND(
BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), IF(
AND(OUV_Booking__r.OUV_ApprovalProcessActive__c = false,
AND(OR(B25__StartLocal__c &lt; NOW(),B25__EndLocal__c&lt; B25__StartLocal__c ),
(B25__Status__r.Name) = &apos;New&apos;
)),
true,false)
)</errorConditionFormula>
        <errorMessage>Reservation End Date should be greater than Reservation Start Date and Reservation Start Date should be greater than the current time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_VLA_Checkbox_Validation</fullName>
        <active>true</active>
        <description>Turns the fields Loan Agreement Market, Loan Agreement Category and Loan Agreement Language mandatory if &apos;Vehicle Loan Agreement&apos; check box is ticked</description>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
Vehicle_Loan_Agreement__c = TRUE, 
OR( 
ISBLANK(TEXT(Loan_Agreement_Market__c)), 
ISBLANK(TEXT(Loan_Category__c)), 
ISBLANK(TEXT(Loan_Agreement_Language__c)) 
) 
)</errorConditionFormula>
        <errorMessage>The fields Loan Agreement Market, Loan Agreement Category and Loan Agreement Language must be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_Handed_In_Validation</fullName>
        <active>true</active>
        <description>If the Vehicle on the Reservation has a status of Handed In OR the Forecast/Actual Hand In Date is &lt; Reservation End Date, only allow the Reservation to be created for some Reservation Types
- Repair</description>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), 
OR( 
ISPICKVAL(OUV_Vehicle__r.OUV_VehicleMasterStatus__c, &apos;Handed In&apos;), OUV_Vehicle__r.OUV_ExpectedHandInDate__c &lt; DATEVALUE( B25__EndLocal__c ) ), B25__Reservation_Type__r.Name != &apos;Repair&apos;,
B25__Reservation_Type__r.Name != &apos;Used Vehicle Sale/Remarketing&apos;, 
B25__Reservation_Type__r.Name != &apos;JLR Internal Workshop inc. Passout&apos; )</errorConditionFormula>
        <errorMessage>This Reservation cannot be created because either the Vehicle has a status of Handed In or the Forecast/Actual Hand In Date is before the Reservation End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Verify_sensitive_Field</fullName>
        <active>true</active>
        <description>Internal JLR Contact field should be case sensitive</description>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName , &apos;OUV_&apos;), Internal_JLR_Contact__c &lt;&gt; LOWER(Internal_JLR_Contact__c)
)</errorConditionFormula>
        <errorMessage>Internal JLR Contact should be JLR CDSID in lowercase</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Cannot_change_once_closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 BEGINS( RecordType.DeveloperName, &quot;SO_&quot;),
 ISPICKVAL( PRIORVALUE( SO_Status__c ) , &quot;Closed&quot;),
 OR(
   ISCHANGED( SO_Status__c ),
   ISCHANGED( SO_Closed_Reason__c )
 )
)</errorConditionFormula>
        <errorMessage>Once closed you cannot change the status or reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Cannot_move_status_backwards</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  BEGINS( RecordType.DeveloperName, &quot;SO_&quot;),
  OR(
    AND(
       ISPICKVAL( PRIORVALUE( SO_Status__c ) , &quot;Booked&quot;),
       NOT( ISPICKVAL( SO_Status__c , &quot;Closed&quot; ) ),
       ISCHANGED( SO_Status__c )
    ),
    AND(
       ISPICKVAL( PRIORVALUE( SO_Status__c ) , &quot;Reserved&quot;),
       NOT( ISPICKVAL( SO_Status__c , &quot;Closed&quot; ) ),
       NOT( ISPICKVAL( SO_Status__c , &quot;Booked&quot; ) ),
       ISCHANGED( SO_Status__c )
    )
  )
)</errorConditionFormula>
        <errorDisplayField>SO_Status__c</errorDisplayField>
        <errorMessage>You cannot return to an earlier status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Closed_requires_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  BEGINS( RecordType.DeveloperName, &quot;SO_&quot;),
  ISPICKVAL( SO_Status__c , &quot;Closed&quot;),
  ISBLANK( TEXT( SO_Closed_Reason__c) )
)</errorConditionFormula>
        <errorDisplayField>SO_Closed_Reason__c</errorDisplayField>
        <errorMessage>You must provide a close reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Host_When_Confirmed</fullName>
        <active>true</active>
        <description>Host not needed for maintenance</description>
        <errorConditionFormula>AND(
  OR(
     RecordType.DeveloperName == &quot;SO_Bespoke&quot;,
     RecordType.DeveloperName == &quot;SO_JLR&quot;,
     RecordType.DeveloperName == &quot;SO_Private_Office&quot;
  ),
  OR(
    ISPICKVAL( SO_Status__c , &quot;Booked&quot; ),
    AND(
      ISPICKVAL( SO_Status__c , &quot;Closed&quot; ),
      ISPICKVAL(  SO_Closed_Reason__c , &quot;Attended&quot; )
    )
  ),
  ISBLANK( SO_Host__c )
)</errorConditionFormula>
        <errorDisplayField>SO_Host__c</errorDisplayField>
        <errorMessage>A Confirmed Reservation must have a Host</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Start_Before_End</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  BEGINS( RecordType.DeveloperName, &quot;SO_&quot;),
   B25__EndLocal__c &lt;  B25__StartLocal__c 
)</errorConditionFormula>
        <errorDisplayField>B25__EndLocal__c</errorDisplayField>
        <errorMessage>Reservation cannot end before it has started</errorMessage>
    </validationRules>
</CustomObject>